Discord Connectivity test

--- a/productList.html
+++ b/productList.html
@@ -12,7 +12,7 @@
   <body id="product_list">
     <header class="NavBar">
       <a id="home_link_mobile" href="index.html"> Le Caviste</a>
-      <!-- 1. Burger Menu Nav / 4. nav -->
+      <!-- 1. Burger Menu Nav / 4. v -->
       <span class="cart"></span>
       <!-- insert cart icon here -->
       <div class="burger_menu">
