--- a/productPage.html
+++ b/productPage.html
@@ -141,7 +141,7 @@
             <div class="char">
               <div class="char1">
                 <h4>Lightness</h4>
-                <ol class="char2">
+                <ol class="char2" id="light">
                   <li class="circle" id="l1"></li>
                   <li class="circle" id="l2"></li>
                   <li class="circle" id="l3"></li>
@@ -151,7 +151,7 @@
               </div>
               <div class="char1">
                 <h4>Smoothness</h4>
-                <ol class="char2">
+                <ol class="char2" id="smooth">
                   <li class="circle" id="s1"></li>
                   <li class="circle" id="s2"></li>
                   <li class="circle" id="s3"></li>
@@ -161,7 +161,7 @@
               </div>
               <div class="char1">
                 <h4>Dryness</h4>
-                <ol class="char2">
+                <ol class="char2" id="dry">
                   <li class="circle red" id="d1"></li>
                   <li class="circle" id="d2"></li>
                   <li class="circle" id="d3"></li>
@@ -171,7 +171,7 @@
               </div>
               <div class="char1">
                 <h4>Acidity</h4>
-                <ol class="char2">
+                <ol class="char2" id="acid">
                   <li class="circle" id="a1"></li>
                   <li class="circle" id="a2"></li>
                   <li class="circle" id="a3"></li>
