--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
     </footer>
     <script src="owlcarousel/jquery.min.js"></script>
     <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="scripts/carousel.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
