related products working + remove carosel prod pg

--- a/productPage.html
+++ b/productPage.html
@@ -184,8 +184,8 @@
         </section>
         <section class="PPrelated">
           <h3>Related products</h3>
-          <div class="relatedWrapper">
-            <button class="pre-btn">
+          <!-- <div class="relatedWrapper"> -->
+            <!-- <button class="pre-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -214,22 +214,26 @@
                   d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
                 />
               </svg>
-            </button>
-            <div class="relatedCard">
-              <div class="relatedimg">
-                <img
-                  src="./Assets/deveza-symphonie-roussilon.png"
-                  alt="related wines placeholder"
-                />
+            </button> -->
+           <div class="related_parent_container">
+            <template class="related_template">
+              <div class="relatedCard">
+                <div class="relatedimg">
+                  <img
+                    src="./Assets/deveza-symphonie-roussilon.png"
+                    alt="related wines placeholder"
+                  />
+                </div>
+                <h4 class="relatedTitle">Joy Sauvignon</h4>
+                <p class="relatedPrice">120 DKK</p>
+                <div class="relatedActions">
+                  <a class="borderA" href="#">Buy</a>
+                  <a class="borderB" href="#">View</a>
+                </div>
               </div>
-              <h4 class="relatedTitle">Joy Sauvignon</h4>
-              <p class="relatedPrice">120 DKK</p>
-              <div class="relatedActions">
-                <a class="borderA" href="#">Buy</a>
-                <a class="borderB" href="#">View</a>
-              </div>
-            </div>
-            <div class="relatedCard">
+            </template>
+           </div>
+            <!-- <div class="relatedCard">
               <div class="relatedimg">
                 <img
                   src="./Assets/wines/les-chazots.png"
@@ -255,8 +259,8 @@
               <div class="relatedActions">
                 <a class="borderA" href="#">Buy</a>
                 <a class="borderB" href="#">View</a>
-              </div>
-            </div>
+              </div>  -->
+            <!-- </div>  -->
           </div>
         </section>
       </div>
