new wines coded links

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p class="productPrice priceSec">DKK 99;-</p>
 
                 <div class="productActions">
-                  <a class="viewBtn btn" href="productPage.html">view</a>
+                  <a class="viewBtn btn" href="productPage.html?id=38">view</a>
                   <a class="buyBtn btn" href="">buy</a>
                 </div>
               </div>
@@ -159,7 +159,7 @@
                 <p class="productPrice priceSec">DKK 96;-</p>
 
                 <div class="productActions">
-                  <a class="viewBtn btn" href="productPage.html">view</a>
+                  <a class="viewBtn btn" href="productPage.html?id=64">view</a>
                   <a class="buyBtn btn" href="">buy</a>
                 </div>
               </div>
