fixed order of buttons in related products

--- a/productPage.html
+++ b/productPage.html
@@ -227,8 +227,9 @@
                 <h4 class="relatedTitle">Joy Sauvignon</h4>
                 <p class="relatedPrice">120 DKK</p>
                 <div class="relatedActions">
-                  <a class="borderA" href="#">Buy</a>
-                  <a class="borderB" href="#">View</a>
+                  <a class="borderB" href="#">VIEW</a>
+                  <a class="borderA" href="#">BUY</a>
+                 
                 </div>
               </div>
             </template>
