fixed form placeholdr text

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                       type="text"
                       id="fullname"
                       name="fullname1"
-                      placeholder="Name"
+                      placeholder="John Doe"
                       required
                     />
                   </div>
@@ -230,7 +230,7 @@
                       type="tel"
                       id="telephone"
                       name="telephone1"
-                      placeholder="XXXXX"
+                      placeholder="+45 123456"
                       required
                     />
                   </div>
@@ -240,7 +240,7 @@
                       type="email"
                       id="email"
                       name="email1"
-                      placeholder="xxx@xxx.xxx"
+                      placeholder="JohnDoe@gmail.dk"
                       required
                     />
                   </div>
@@ -250,7 +250,7 @@
                   <textarea
                     id="message"
                     name="message"
-                    placeholder="Bojour!"
+                    placeholder="Bonjour!..."
                     required
                   ></textarea
                   ><br />
