--- a/productList.html
+++ b/productList.html
@@ -73,11 +73,11 @@
           <ol class="breadcrumbNav">
             <li><a href="index.html">home</a></li>
             <li><a href="index.html#WineCategories">Wines</a></li>
-            <li><a class="categoryName" href="">White</a></li>
+            <li><a class="categoryName" href="">CategoryName</a></li>
           </ol>
         </nav>
         <div id="headerSection">
-          <h1>champagne</h1>
+          <h1 class="categoryName">CategoryName</h1>
         </div>
         <div class="topBar">
           <div class="sortByDropDown">Sort by</div>
