--- a/productPage.html
+++ b/productPage.html
@@ -76,12 +76,12 @@
           <ol class="breadcrumbNav">
             <li><a href="index.html">home</a></li>
             <li><a href="index.html#WineCategories">Wines</a></li>
-            <li class="categoryName">champagne</li>
-            <li>Joy Sauvignon</li>
+            <li class="categoryName">CategoryName</li>
+            <li class="PPtitle">ProductName</li>
           </ol>
         </nav>
         <div id="headerSection">
-          <h1 class="PPtitle">JOY SAUVIGNON</h1>
+          <h1 class="PPtitle">ProductName</h1>
         </div>
 
         <section class="PPproduct">
