IT WORKS! made characteristics section work

--- a/productPage.html
+++ b/productPage.html
@@ -162,7 +162,7 @@
               <div class="char1">
                 <h4>Dryness</h4>
                 <ol class="char2">
-                  <li class="circle red" id="d1"></li>
+                  <li class="circle" id="d1"></li>
                   <li class="circle" id="d2"></li>
                   <li class="circle" id="d3"></li>
                   <li class="circle" id="d4"></li>
