--- a/productPage.html
+++ b/productPage.html
@@ -76,7 +76,7 @@
           <ol class="breadcrumbNav">
             <li><a href="index.html">home</a></li>
             <li><a href="index.html#WineCategories">Wines</a></li>
-            <li class="categoryName">champagne</li>
+            <li><a class="categoryName wineCategoryLink" href="#">cham</a></li>
             <li>Joy Sauvignon</li>
           </ol>
         </nav>
